--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body class="bodyStyle">
+    <h2>Dipak Raj Pandey</h2>
     <div id="header" class="mainHeader">
       <hr />
       <div class="center">Caf&eacute;</div>
